wrap loop in updatecollection function and make form create book in collection array

--- a/index.html
+++ b/index.html
@@ -10,182 +10,182 @@
     <script defer src="/library.js"></script>
   </head>
   <body>
-    <!-- book content -->
-    <p id="carusel"></p>
+    <header>
+      <!-- open modal btn -->
+      <button data-micromodal-trigger="modal-1" id="add-book">Add book</button>
+    </header>
+    <main>
+      <!-- book content -->
+      <div id="card-container"></div>
 
-    <!-- open modal btn -->
-    <button data-micromodal-trigger="modal-1" id="add-book">Add book</button>
-
-    <!-- modal -->
-    <div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
-      <div class="modal__overlay" tabindex="-1" data-micromodal-close>
-        <div class="workaround-micro-bug">
-          <div
-            class="modal__container"
-            role="dialog"
-            aria-modal="true"
-            aria-labelledby="modal-1-title">
-            <header class="modal__header">
-              <h2 class="modal__title" id="modal-1-title">Add a book</h2>
-              <button
-                class="modal__close"
-                aria-label="Close modal"
-                data-micromodal-close></button>
-            </header>
-            <main class="modal__content" id="modal-1-content">
-              <form
-                action="#"
-                method="post"
-                onsubmit="return validatePasswords()">
-                <fieldset>
-                  <legend>
-                    Add a book to the collection by filling out the information
-                    below.
-                  </legend>
-                  <div class="form-inputs">
-                    <div>
-                      <div class="input-container">
-                        <input
-                          type="text"
-                          name="title"
-                          id="title"
-                          class="input"
-                          placeholder="Title"
-                          required />
-                        <label for="title" class="label">Title</label>
-                        <button
-                          class="clear"
-                          type="button"
-                          data-input-id="title"
-                          aria-label="Clear input">
-                          <svg
+      <!-- modal -->
+      <div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
+        <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+          <div class="workaround-micro-bug">
+            <div
+              class="modal__container"
+              role="dialog"
+              aria-modal="true"
+              aria-labelledby="modal-1-title">
+              <header class="modal__header">
+                <h2 class="modal__title" id="modal-1-title">Add a book</h2>
+                <button
+                  class="modal__close"
+                  aria-label="Close modal"
+                  data-micromodal-close></button>
+              </header>
+              <main class="modal__content" id="modal-1-content">
+                <form
+                  action="#"
+                  method="post"
+                  onsubmit=""
+                  id="add-collection-form">
+                  <fieldset>
+                    <legend>
+                      Add a book to the collection by filling out the
+                      information below.
+                    </legend>
+                    <div class="form-inputs">
+                      <div>
+                        <div class="input-container">
+                          <input
+                            type="text"
+                            name="title"
+                            id="title"
+                            class="input"
+                            placeholder="Title"
+                            required />
+                          <label for="title" class="label">Title</label>
+                          <button
+                            class="clear"
+                            type="button"
                             data-input-id="title"
-                            viewBox="0 0 16 16"
-                            width="12"
-                            height="12">
-                            <path
-                              d="M 1 1 L 15 15 M 1 15 L 15 1"
-                              fill="none"
-                              stroke-width="2"
-                              stroke="currentColor" />
-                          </svg>
-                        </button>
+                            aria-label="Clear input">
+                            <svg
+                              data-input-id="title"
+                              viewBox="0 0 16 16"
+                              width="12"
+                              height="12">
+                              <path
+                                d="M 1 1 L 15 15 M 1 15 L 15 1"
+                                fill="none"
+                                stroke-width="2"
+                                stroke="currentColor" />
+                            </svg>
+                          </button>
+                        </div>
                       </div>
-                    </div>
-                    <div>
-                      <div class="input-container">
-                        <input
-                          type="text"
-                          name="author"
-                          id="author"
-                          class="input"
-                          placeholder="Author"
-                          required />
-                        <label for="author" class="label">Author</label>
-                        <button
-                          class="clear"
-                          type="button"
-                          data-input-id="author"
-                          aria-label="Clear input">
-                          <svg
+                      <div>
+                        <div class="input-container">
+                          <input
+                            type="text"
+                            name="author"
+                            id="author"
+                            class="input"
+                            placeholder="Author"
+                            required />
+                          <label for="author" class="label">Author</label>
+                          <button
+                            class="clear"
+                            type="button"
                             data-input-id="author"
-                            viewBox="0 0 16 16"
-                            width="12"
-                            height="12">
-                            <path
-                              d="M 1 1 L 15 15 M 1 15 L 15 1"
-                              fill="none"
-                              stroke-width="2"
-                              stroke="currentColor" />
-                          </svg>
-                        </button>
+                            aria-label="Clear input">
+                            <svg
+                              data-input-id="author"
+                              viewBox="0 0 16 16"
+                              width="12"
+                              height="12">
+                              <path
+                                d="M 1 1 L 15 15 M 1 15 L 15 1"
+                                fill="none"
+                                stroke-width="2"
+                                stroke="currentColor" />
+                            </svg>
+                          </button>
+                        </div>
                       </div>
-                    </div>
-                    <div>
-                      <div class="input-container">
-                        <input
-                          type="text"
-                          name="year"
-                          id="year"
-                          class="input"
-                          placeholder="Year"
-                          required />
-                        <label for="year" class="label">Year</label>
-                        <button
-                          class="clear"
-                          type="button"
-                          data-input-id="year"
-                          aria-label="Clear input">
-                          <svg
+                      <div>
+                        <div class="input-container">
+                          <input
+                            type="text"
+                            name="year"
+                            id="year"
+                            class="input"
+                            placeholder="Year"
+                            required />
+                          <label for="year" class="label">Year</label>
+                          <button
+                            class="clear"
+                            type="button"
                             data-input-id="year"
-                            viewBox="0 0 16 16"
-                            width="12"
-                            height="12">
-                            <path
-                              d="M 1 1 L 15 15 M 1 15 L 15 1"
-                              fill="none"
-                              stroke-width="2"
-                              stroke="currentColor" />
-                          </svg>
-                        </button>
+                            aria-label="Clear input">
+                            <svg
+                              data-input-id="year"
+                              viewBox="0 0 16 16"
+                              width="12"
+                              height="12">
+                              <path
+                                d="M 1 1 L 15 15 M 1 15 L 15 1"
+                                fill="none"
+                                stroke-width="2"
+                                stroke="currentColor" />
+                            </svg>
+                          </button>
+                        </div>
                       </div>
-                    </div>
-                    <div>
-                      <div class="input-container">
-                        <input
-                          type="text"
-                          name="length"
-                          id="length"
-                          class="input"
-                          placeholder="Length"
-                          required />
-                        <label for="first_name" class="label">Length</label>
-                        <button
-                          class="clear"
-                          type="button"
-                          data-input-id="length"
-                          aria-label="Clear input">
-                          <svg
+                      <div>
+                        <div class="input-container">
+                          <input
+                            type="text"
+                            name="length"
+                            id="length"
+                            class="input"
+                            placeholder="Length"
+                            required />
+                          <label for="first_name" class="label">Length</label>
+                          <button
+                            class="clear"
+                            type="button"
                             data-input-id="length"
-                            viewBox="0 0 16 16"
-                            width="12"
-                            height="12">
-                            <path
-                              d="M 1 1 L 15 15 M 1 15 L 15 1"
-                              fill="none"
-                              stroke-width="2"
-                              stroke="currentColor" />
-                          </svg>
-                        </button>
+                            aria-label="Clear input">
+                            <svg
+                              data-input-id="length"
+                              viewBox="0 0 16 16"
+                              width="12"
+                              height="12">
+                              <path
+                                d="M 1 1 L 15 15 M 1 15 L 15 1"
+                                fill="none"
+                                stroke-width="2"
+                                stroke="currentColor" />
+                            </svg>
+                          </button>
+                        </div>
+                      </div>
+                      <div class="checkbox-container">
+                        <label for="read">Read</label>
+                        <input type="checkbox" name="read" />
                       </div>
                     </div>
-                  </div>
-                  <footer class="modal__footer">
-                    <button
-                      class="modal__btn"
-                      data-micromodal-close
-                      aria-label="Close this dialog window">
-                      Close
-                    </button>
-                    <button class="modal__btn modal__btn-primary">
-                      Continue
-                    </button>
-                  </footer>
-                </fieldset>
-              </form>
-            </main>
+                    <footer class="modal__footer">
+                      <button
+                        class="modal__btn"
+                        data-micromodal-close
+                        aria-label="Close this dialog window">
+                        Close
+                      </button>
+                      <button class="modal__btn modal__btn-primary submit-btn">
+                        Add to collection
+                      </button>
+                    </footer>
+                  </fieldset>
+                </form>
+              </main>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-
+    </main>
     <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
-    <script>
-      MicroModal.init({
-        disableFocus: true,
-        awaitCloseAnimation: true,
-        awaitOpenAnimation: true,
-      });
-    </script>
   </body>
 </html>
