--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                       </div>
                       <div class="checkbox-container">
                         <label for="read">Read</label>
-                        <input type="checkbox" name="read" />
+                        <input type="checkbox" name="read" checked />
                       </div>
                     </div>
                     <footer class="modal__footer">
