fixed links to stylesheet and scripts from index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library app</title>
     <link rel="icon" type="image/png" href="assets/books.png" sizes="any" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://use.typekit.net/tii4vwt.css" />
-    <script defer src="/library.js"></script>
+    <script defer src="library.js"></script>
   </head>
   <body>
     <header>
